--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&display=swap');
 body {
+	background-image: url("../src/Icons/wallpapper.png");
+	background-position: center;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -38,3 +40,168 @@ code {
   font-size: 20px;
   color: white;
 }
+
+
+
+.animationDamage {
+  
+  animation: damage 1s ease 0s 1 normal forwards;
+  transition: 0.4s;
+  filter: drop-shadow(0 0 40px rgba(255, 0, 0, 1))
+}
+@keyframes damage {
+	0% {
+		transform: translate(0);
+	}
+
+	10% {
+		transform: translate(-2px, -2px);
+	}
+
+	20% {
+		transform: translate(2px, -2px);
+	}
+
+	30% {
+		transform: translate(-2px, 2px);
+	}
+
+	40% {
+		transform: translate(2px, 2px);
+	}
+
+	50% {
+		transform: translate(-2px, -2px);
+	}
+
+	60% {
+		transform: translate(2px, -2px);
+	}
+
+	70% {
+		transform: translate(-2px, 2px);
+	}
+
+	80% {
+		transform: translate(-2px, -2px);
+	}
+
+	90% {
+		transform: translate(2px, -2px);
+	}
+
+	100% {
+		transform: translate(0);
+	}
+}
+
+
+.buttonLose {
+	display: none;
+}
+
+.buttonNoLose {
+	display: block;
+}
+
+
+.defaitPlayer {
+	animation: LosePlayer 2s ease 0s 1 normal forwards;
+	color: red;
+	font-family: "Jaro", sans-serif;
+	border-color: white;
+	font-size: 30px;
+}
+@keyframes LosePlayer {
+	0% {
+		opacity: 0;
+		transform: rotateX(-70deg);
+		transform-origin: bottom;
+	}
+
+	100% {
+		opacity: 1;
+		transform: rotateX(0);
+		transform-origin: bottom;
+	}
+}
+.hidden {
+    display: none;
+}
+.buttonNone{
+	display: none;
+}
+.superAttaqueAnim {
+	transition: 1,5s;
+	display:flex !important;
+	text-align: center;
+	background: linear-gradient(270deg, blue, rgb(246, 246, 246));
+    background-size: 200% 200%;
+	animation: Superhit 1s ease 0s 6 normal forwards, bgMove 2s linear infinite;
+	
+
+
+}
+@keyframes bgMove {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+@keyframes Superhit {
+	0% {
+		transform: scale3d(1, 1, 1);
+	}
+
+	30% {
+		transform: scale3d(0.75, 1.25, 1);
+	}
+
+	40% {
+		transform: scale3d(1.25, 0.75, 1);
+	}
+
+	50% {
+		transform: scale3d(0.85, 1.15, 1);
+	}
+
+	65% {
+		transform: scale3d(1.05, 0.95, 1);
+	}
+
+	75% {
+		transform: scale3d(0.95, 1.05, 1);
+	}
+
+	100% {
+		transform: scale3d(1, 1, 1);
+	}
+}
+
+.boxButton {
+	display: flex;
+	
+}
+
+.playerSuperAttack {
+  transition: 0.4s;
+  filter: drop-shadow(0 0 25px rgb(0, 221, 255));
+  animation: animateDropShadow 2s infinite alternate;
+}
+@keyframes animateDropShadow {
+	0% {
+	  filter: drop-shadow(0 0 25px rgb(0, 221, 255));
+	}
+	50% {
+	  filter: drop-shadow(0 0 50px rgb(0, 221, 255));
+	}
+	100% {
+	  filter: drop-shadow(0 0 25px rgb(0, 221, 255));
+	}
+  }
+  
