--- a/src/index.css
+++ b/src/index.css
@@ -204,9 +204,61 @@ code {
 	  filter: drop-shadow(0 0 25px rgb(0, 221, 255));
 	}
   }
+.ganonDefait {
+	  animation: BossFailed 4s ease 0s 1 normal forwards;
+	  transition: 1s;
+	  color: white;
+	  font-size: 50px;
+	  font-family: "Jaro", sans-serif;
+}
+@keyframes BossFailed {
+	0% {
+		animation-timing-function: ease-in;
+		opacity: 0;
+		transform: scale(7);
+	}
+
+	38% {
+		animation-timing-function: ease-out;
+		opacity: 1;
+		transform: scale(1);
+	}
+
+	55% {
+		animation-timing-function: ease-in;
+		transform: scale(1.5);
+	}
+
+	72% {
+		animation-timing-function: ease-out;
+		transform: scale(1);
+	}
+
+	81% {
+		animation-timing-function: ease-in;
+		transform: scale(1.24);
+	}
+
+	89% {
+		animation-timing-function: ease-out;
+		transform: scale(1);
+	}
+
+	95% {
+		animation-timing-function: ease-in;
+		transform: scale(1.04);
+	}
+
+	100% {
+		animation-timing-function: ease-out;
+		transform: scale(1);
+	}
+}
+
   
-.heroesDefait {
+.BossDefait {
 	animation: defait 2s ease 0s 1 normal forwards;
+	
 }
 @keyframes defait {
 	0% {
@@ -244,4 +296,71 @@ code {
 	}
 }
  
+/* MESSAGE BOSS VAICU */
+.messageDefaitBoss {
+	z-index: 999;
+	color: white;
+	font-size: 50px;
+}
+
+/* TEST */
+
+.opening-overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: rgba(66, 66, 66, 0.7); 
+	z-index: 9999; 
+}
+
+  .blur-background {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	backdrop-filter: blur(10px);
+	z-index: 1;
+  }
   
+  .logo {
+	position: relative;
+	z-index: 2;
+	width: 400px; 
+	height: auto;
+  }
+  .startButton {
+	position: relative;
+	z-index: 2;
+	width: 100px; 
+	height: auto;
+	background-color: #4bd49c;
+	transition: 0.4s;
+  }
+  .startButton:hover {
+	background-color: #03c776;
+	transition: 0.6s;
+
+  }
+  
+  /* FAIRE DISPARAITRE LE OVERLAY SUITE  */
+  .overlayDisparition {
+	animation: OverlayNone 2s ease 0s 1 normal forwards;
+  }
+
+  @keyframes OverlayNone {
+	0% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+
+	100% {
+		opacity: 0;
+		transform: translateY(-250px);
+	}
+}
