--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,7 @@ code {
 
 
 .defaitPlayer {
+	
 	animation: LosePlayer 2s ease 0s 1 normal forwards;
 	color: red;
 	font-family: "Jaro", sans-serif;
@@ -205,10 +206,12 @@ code {
 	}
   }
 .ganonDefait {
+	  z-index: 999;
+	  padding: 100px;
 	  animation: BossFailed 4s ease 0s 1 normal forwards;
 	  transition: 1s;
 	  color: white;
-	  font-size: 50px;
+	  font-size: 80px;
 	  font-family: "Jaro", sans-serif;
 }
 @keyframes BossFailed {
@@ -327,21 +330,80 @@ code {
 	backdrop-filter: blur(10px);
 	z-index: 1;
   }
+
+  .blur-background2 {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	backdrop-filter: blur(1px);
+	z-index: 1;
+  }
   
   .logo {
+	transition: 1s;
+	display: none;
+  }
+
+  .logoDisplay {
+	animation: apparationLogo  2s ease 0s 1 normal forwards ;
 	position: relative;
 	z-index: 2;
 	width: 400px; 
 	height: auto;
+	transition: 1s;
+	display: block;
+	transition: 0.4s;
+	
   }
-  .startButton {
+ 
+  @keyframes apparationLogo {
+	0% {
+		opacity: 0;
+		transform: scale(1.4);
+	}
+
+	100% {
+		opacity: 1;
+		transform: scale(1);
+	}
+}
+.playerSuperAttack {
+	transition: 0.4s;
+	filter: drop-shadow(0 0 25px rgb(0, 221, 255));
+	animation: animateDropShadow 2s infinite alternate;
+  }
+  @keyframes animateDropShadow {
+	  0% {
+		filter: drop-shadow(0 0 25px rgb(0, 221, 255));
+	  }
+	  50% {
+		filter: drop-shadow(0 0 50px rgb(0, 221, 255));
+	  }
+	  100% {
+		filter: drop-shadow(0 0 25px rgb(0, 221, 255));
+	  }
+	}
+.startButton {
+	display: none;
+	
+  }
+  .startButtonDisplay {
+	display: block;
+	margin-left: 39%;
+	justify-content: center;
 	position: relative;
 	z-index: 2;
 	width: 100px; 
 	height: auto;
 	background-color: #4bd49c;
 	transition: 0.4s;
+	animation: apparationLogo 2s ease 0s 1 normal forwards;
   }
+  
+
+
   .startButton:hover {
 	background-color: #03c776;
 	transition: 0.6s;
@@ -364,3 +426,179 @@ code {
 		transform: translateY(-250px);
 	}
 }
+
+.divHeros {
+	margin-top: -50px;
+}
+
+.bgMonsterProgress {
+	background-color: #f90a0ace;
+	
+	animation: loader 2s ease 0s 1 normal forwards;
+	
+}
+
+@keyframes loader {
+    0% {left: 0px;}
+    99% { left: 100%;} 
+}
+
+.blog {
+	z-index:99999999999999999999999999999999999999999999;
+	color: white ;
+	font-size: 50px;
+
+}
+
+.heroesDefait {
+	animation: defaitHeros 2s ease 0s 1 normal forwards;
+}
+@keyframes defaitHeros {
+	0% {
+		animation-timing-function: ease-out;
+		transform: translateY(0);
+	}
+
+	5% {
+		animation-timing-function: ease-in;
+		transform: translateY(30px);
+	}
+
+	15% {
+		animation-timing-function: ease-out;
+		transform: translateY(0);
+	}
+
+	25% {
+		animation-timing-function: ease-in;
+		transform: translateY(38px);
+	}
+
+	38% {
+		animation-timing-function: ease-out;
+		transform: translateY(0);
+	}
+
+	52% {
+		animation-timing-function: ease-in;
+		transform: translateY(75px);
+	}
+
+	70% {
+		animation-timing-function: ease-out;
+		transform: translateY(0);
+	}
+
+	85% {
+		opacity: 1;
+	}
+
+	100% {
+		opacity: 0;
+		transform: translateY(800px);
+	}
+}
+
+
+.soin {
+  transition: 1,5s;
+  filter: drop-shadow(0 0 25px rgb(110, 239, 55));
+  animation: animateDropSoin 3s;
+}
+
+@keyframes animateDropSoin {
+  0% {
+    filter: drop-shadow(0 0 25px rgb(110, 239, 55));
+  }
+  100% {
+    filter: drop-shadow(0 0 25px rgb(191, 255, 0));
+  }
+}
+
+
+/* SOINS AFFICHES DYNAMIQUEMENT  */
+@keyframes showHeal {
+	0% {
+	  opacity: 1;
+	  transform: translateY(100);
+	}
+	100% {
+	  opacity: 0;
+	  transform: translateY(-600px);
+	}
+  }
+  
+  .heal-text {
+	font-family: "Jaro", sans-serif;
+	position: absolute;
+	font-size: 10.5rem;
+	color: rgb(110, 239, 55);
+	animation: showHeal 2.5s forwards;
+  }
+
+  .pv-text {
+	font-family: "Jaro", sans-serif;
+	position: absolute;
+	font-size: 10.5rem;
+	color: rgb(240, 76, 76);
+	animation: showHeal 2.5s forwards;
+  }
+
+
+  /* DEGATS CRITIQUE POUR LE MONSTRE  */
+  @keyframes showCriticalHit {
+	0% {
+	  opacity: 1;
+	  transform: scale(1) translateY(0);
+	}
+	100% {
+	  opacity: 0;
+	  transform: scale(1.5) translateY(-50px);
+	}
+  }
+  
+  .critical-hit-text {
+	position: fixed;
+	top: 30%;
+	left: 27%;
+	transform: translate(-50%, -50%);
+	font-size: 6rem;
+	color: red;
+	font-weight: bold;
+	z-index: 9999;
+	animation: showCriticalHit 3.5s forwards;
+	text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5), 4px 4px 20px rgba(0, 0, 0, 0.5); 
+	white-space: nowrap;
+  }
+  
+  /* ANIMATION TEXT READY SUPERATK  */
+  @keyframes moveLeftToRight {
+	0% {
+	  transform: translateX(-100%);
+	}
+	35% {
+	  transform: translateX(0);
+	}
+	65% {
+	  transform: translateX(0);
+	}
+	100% {
+	  transform: translateX(130%);
+	}
+  }
+  
+  
+  
+  .move-text {
+	position: fixed;
+	top: 30%;
+	left: 10%;
+	font-size: 5rem;
+	color: rgb(34, 108, 235);
+	font-weight: bold;
+	font-style: italic;
+	z-index: 9999;
+	animation: moveLeftToRight 3s linear forwards;
+	text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.809), 4px 4px 20px rgba(255, 255, 255, 0.933); 
+  }
+  
