--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -592,13 +591,58 @@ code {
   .move-text {
 	position: fixed;
 	top: 30%;
-	left: 10%;
+	left: 5%;
 	font-size: 5rem;
 	color: rgb(34, 108, 235);
 	font-weight: bold;
 	font-style: italic;
 	z-index: 9999;
-	animation: moveLeftToRight 3s linear forwards;
-	text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.809), 4px 4px 20px rgba(255, 255, 255, 0.933); 
+	animation: moveLeftToRight 3.5s linear forwards;
+	text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.809), 4px 4px 20px rgba(255, 255, 255, 0.933);
   }
   
+  .move-text::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: rgba(255, 255, 255, 0.2); 
+	backdrop-filter: blur(10px);
+	z-index: -1; 
+	border-radius: 10px; 
+  }
+  
+
+  .spanName {
+	color: red;
+	text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.809), 4px 4px 20px rgba(55, 55, 55, 0.933); 
+
+	
+  }
+
+  /* TEST EFFET BG SUPERATK */
+
+.testSuperAtkBody {
+	background-color: black;
+	transition: 0.5s;
+	z-index: 0;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	z-index: 0;
+
+  }
+
+  .bg-black {
+	background-color: rgba(0, 0, 0, 0.841);
+	transition: 0.5s ;
+
+  }
+
+  .bg-red {
+	background-color: rgba(255, 0, 0, 0.693);
+
+  }
